--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -126,3 +126,27 @@
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
   }
+
+  .section1 {
+    position: relative;
+    height: 100vh; /* Ajusta la altura según tus necesidades */
+    overflow: hidden; /* Evita el desbordamiento del contenido */
+  }
+  
+  .carousel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  
+  .carousel img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+  
