--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+
+html {
+  font-family: 'Comfortaa', cursive;
+  font-weight: bold;
+}
+body[data-vite] {
+  font-family: 'Comfortaa', cursive;
+  font-weight: bold;
+}
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,9 +50,4 @@
 
 .read-the-docs {
   color: #888;
-}
-
-body {
-  font-family: 'Ubuntu', sans-serif;
-  font-weight: bold;
 }
