--- a/src/styles/Carousel.module.css
+++ b/src/styles/Carousel.module.css
@@ -1,9 +1,29 @@
-.carousel-img {
-  height: 400px;
-  width: 100%;
-  object-fit: cover;
+.carousel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
-.carousel-column {
-  padding: 0 !important;
+.carousel-image {
+  object-fit: cover;
+  height: 100vh;
+  width: 100%;
 }
+
+.carousel-container {
+width: 100%;
+height: 100%;
+}
+
+.carousel-container .carousel {
+width: 100%;
+height: 100%;
+}
+
+.carousel-container .carousel-inner {
+width: 100%;
+height: 100%;
+}
+
