--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,28 +1,34 @@
 .navbar {
-    background-color: #6F7EAB;
-  }
-    body {
+  background-color: #6F7EAB;
+}
+
+body {
   background-color: #FFF8E6;
-  
-  }
-  .navbar-nav .nav-link:hover {
+  font-family: 'Comfortaa', cursive;
+}
+
+.navbar-nav .nav-link:hover {
   color: #ffffff;
   background-color: #C9CDDD;
-  }
-  .carousel-item img {
+}
+
+.carousel-item img {
   max-width: 50%;
   margin: 0 auto; /* Centrado horizontal */
-  }
-  
-  .nav-link{
-     font-size: 40px;
-  }
-  a {
-    text-decoration: none; /* quita el subrayado */
-    color: white;
-    /* text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black; */
-    font-family: 'Ubuntu', sans-serif;
-  }
-  a:hover {
-    color: white; /* cambiar color de texto al pasar el mouse */
-  }
+}
+
+.nav-link {
+  font-size: 40px;
+  font-family: 'Comfortaa', cursive;
+}
+
+a {
+  text-decoration: none; /* quita el subrayado */
+  color: white;
+  /* text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black; */
+  font-family: 'Ubuntu', sans-serif;
+}
+
+a:hover {
+  color: white; /* cambiar color de texto al pasar el mouse */
+}
