--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,13 @@
+html {
+  font-family: 'Comfortaa', cursive;
+  font-weight: bold;
+}
+body[data-vite] {
+  font-family: 'Comfortaa', cursive;
+  font-weight: bold;
+}
+
+
 .home {
     display: flex;
     flex-direction: column;
@@ -112,8 +122,8 @@
   }
   .galeria-img {
     padding: 1rem;
-    border: 3px solid #1C2E4A; /* Cambia el color del borde aquí */
-    border-radius: 8px;
+    /* border: 3px solid #1C2E4A; 
+    border-radius: 8px; */
     transition: 0.3s;
   }
   
@@ -122,31 +132,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
 
-  body {
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: bold;
-  }
 
   .section1 {
-    position: relative;
-    height: 100vh; /* Ajusta la altura según tus necesidades */
-    overflow: hidden; /* Evita el desbordamiento del contenido */
-  }
-  
-  .carousel {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  
-  .carousel img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    margin: 0;
-    padding: 0;
-    border: none;
   }
   
